# clarita-api

./: .dir-locals.el  .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  Pipfile  README.md  mypy.ini  mypy_run.sh  pyproject.toml  setup.cfg  test.sh
.github/workflows/: pr_check.yml
src/: main.py  models.py
src/clarita/: config.py  exceptions.py  http.py  log.py  main.py  models.py  thumbs.py  typehint.py  types.py
src/clarita/digikam/: albums.py  constants.py  db.py  photos.py  roots.py  thumbs.py
src/digikam/: __init__.py  albums.py  db.py  photos.py
src/models/: albums.py  photos.py
tests/: conftest.py  test-digikam4.db  test_album.py  test_albums.py  test_albums_detail.py  test_albums_list.py  test_photo.py  test_photos.py  test_photos_detail.py  test_photos_file.py  test_photos_list.py  test_photos_thumb.py  test_roots.py  test_thumbs.py
tests/digikam_db/: digikam4.db  recognition.db  similarity.db  thumbnails-digikam.db
