[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarita-api"
version = "0.1.0"
description = "API server for the Clarita web gallery"
authors = [
    { name = "Fidel Ramos", email = "contact.gyldd@8shield.net" }
]
dependencies = [
    "fastapi>=0.112.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "aiosqlite>=0.20.0",
    "uvicorn>=0.30.6",
    "pillow>=10.4.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/clarita"]

[tool.mypy]
mypy_path = "./src"
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[tool.pytest_env]
CORS_ORIGINS = "[\"*\"]"
DIGIKAM_DB_DIR = "tests/digikam_db/"
#ROOT_MAP = {value = "{\"1\": \"{PWD}/tests/images/\"}", transform = true}
ROOT_MAP = "{\"1\": \"tests/images/\"}"

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.lint]
isort.known-first-party = ["clarita"]
select = ["ASYNC", "E4", "E7", "E9", "F", "I"]  # FIXME: add UP

[tool.rye]
generate-hashes = true
managed = true
virtual = true
dev-dependencies = [
    "httpx>=0.27.2",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "pytest-env>=1.1.3",
    "python-lsp-server[rope]>=1.12.0",
    "python-lsp-ruff>=2.2.2",
    "pylsp-mypy>=0.6.9",
    "ipython>=8.27.0",
]

[tool.rye.scripts]
dev = { cmd = "uvicorn  --app-dir src clarita.main:app --reload" }
start = { cmd = "uvicorn --app-dir src clarita.main:app" }
mypy-all = { cmd = "mypy -p clarita --namespace-packages" }
