[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[flake8]
exclude = .git,__pycache__
# https://cjolowicz.github.io/posts/hypermodern-python-03-linting/
# flake8-bugbear gives a 10% margin on line length
max-line-length = 90
select = B,B9,BLK,C,E,F,I,S,W
extend-ignore = E203,E501,W503
application-import-names = src,tests
import-order-style = google
